force-app/main/default/objects/Cash_Transfer__c/Cash_Transfer__c.object-meta.xml
<CustomObject>
    <label>Cash Transfer</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Cash Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>