force-app/main/default/objects/Cash_Transfer__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Cash Transfers</relationshipLabel>
    <relationshipName>Cash_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>