force-app/main/default/objects/Cash_Transfer__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Cash Transfers</relationshipLabel>
    <relationshipName>Cash_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>