force-app/main/default/objects/Cash_Transfer__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Route</fullName>
            </value>
            <value>
                <fullName>Head Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>