force-app/main/default/objects/Cash_Transfer__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Cash Transfers</relationshipLabel>
    <relationshipName>Cash_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>