force-app/main/default/objects/Cash_Transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Branch__c</columns>
    <columns>Route__c</columns>
    <columns>Amount__c</columns>
    <columns>Trip__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>