force-app/main/default/objects/Cash_Transfer__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Branch__c</columns>
    <columns>Route__c</columns>
    <columns>Amount__c</columns>
    <columns>Trip__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>